--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -92,7 +92,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
             <br>
-            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+            Committee: Tianyin Xu (chair), Indranil Gupta, Darko Marinov, Ramnatthan Alagappan, Chen Wang
           </span>
         </div>
       </td>
@@ -110,7 +110,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on May 2, 2025. 
             <br>
-            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+            Committee: Tianyin Xu (chair), Josep Torrellas, Darko Marinov, Saugata Ghose, Weiwei Jia
           </span>
         </div>
       </td>
@@ -128,7 +128,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Apr. 22, 2025. 
             <br>
-            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+            Committee: Tianyin Xu (chair), Lingming Zhang, Darko Marinov, Minjia Zhang, Indranil Gupta, Minghua Ma
           </span>
         </div>
       </td>
@@ -146,7 +146,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Jan. 15, 2025. 
             <br>
-            Advisor: <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a>
+            Committee: Lingming Zhang (chair), Darko Marinov, Tianyin Xu, Tianqi Chen
           </span>
         </div>
       </td>
@@ -164,7 +164,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
             <br>
-            Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
+            Committee: Nam Sung Kim (chair), Josep Torrellas, Saugata Ghose, Tianyin Xu, Ren Wang
           </span>
         </div>
       </td>
@@ -194,7 +194,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 30, 2025.
             <br>
-            Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
+            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, Patrick Traynor
           </span>
         </div>
       </td>
@@ -212,7 +212,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois at Urbana-Champaign, defended on May 30, 2025.
             <br>
-            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+            Committee: Josep Torrellas (chair), Darko Marinov, Jian Huang, Tianyin Xu, Hubertus Franke, Christina Delimitrou, Christopher Hughes, Dimitrios Skarlatos
           </span>
         </div>
       </td>
@@ -230,7 +230,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois at Urbana-Champaign, defended on May 7, 2025. 
             <br>
-            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+            Committee: Tianyin Xu (chair), Aishwarya Ganesan, Philip Brighten Godfrey, Jon Howell, Darko Marinov, Lalith Suresh
           </span>
         </div>
       </td>
@@ -248,8 +248,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 4, 2025. 
             <br>
-            Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
-		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
+            Committee: Tianyin Xu (chair), Adam Bates, Hubertus Franke, Michael V. Le, Darko Marinov, Dan Williams
           </span>
         </div>
       </td>
@@ -267,7 +266,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 1, 2025.
             <br>
-            Advisor: <a href="https://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
+            Committee: Darko Marinov (chair), Lingming Zhang, Tianyin Xu, Wei Yang
           </span>
         </div>
       </td>
@@ -285,7 +284,7 @@ td.papers {
             <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Mar. 25, 2025.
             <br>
-            Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
+            Committee: Kirill Levchenko (chair), Gang Wang, Tianyin Xu, Kimberly "kc" Claffy
           </span>
         </div>
       </td>
@@ -303,7 +302,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 21, 2024.
             <br>
-            Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
+            Committee: Matthew Caesar (chair), Brighten Godfrey, Radhika Mittal, Tianyin Xu, David Walker, Steffen Smolka
           </span>
         </div>
       </td>
@@ -321,7 +320,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on April 5, 2024.
             <br>
-            Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
+            Committee: Kevin Chen-Chuan Chang (chair), Hao Peng, Hanghang Tong, Tianyin Xu, Diyi Yang
           </span>
         </div>
       </td>
@@ -342,7 +341,7 @@ td.papers {
 		    passed prelim on Oct. 2022.
 -->
             <br>
-            Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+            Committee: Klara Nahrstedt (chair), Deming Chen, Tianyin Xu, Baochun Li
           </span>
         </div>
       </td>
@@ -360,7 +359,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 17, 2023.
             <br>
-            Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
+            Committee: Brighten Godfrey (chair), Ryan Beckett, Indranil Gupta, Tianyin Xu
           </span>
         </div>
       </td>
@@ -378,7 +377,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug. 15, 2023.
             <br>
-            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+            Committee: Gul Agha (chair), Indranil Gupta, Tianyin Xu, Philipp Haller
           </span>
         </div>
       </td>
@@ -397,6 +396,8 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Sep. 27, 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+            <br>
+            Committee: Klara Nahrstedt (chair), Brighten Godfrey, Tianyin Xu, Baochun Li
           </span>
         </div>
       </td>
@@ -414,7 +415,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 25, 2022.
             <br>
-            Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
+            Committee: Tao Xie (co-chair), Tianyin Xu (co-chair), Darko Marinov, Mukul Prasad
           </span>
         </div>
       </td>
@@ -432,7 +433,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 13, 2022.
             <br>
-            Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
+            Committee: Sibin Mohan (chair), Ravishankar Iyer, Vikram Adve, Tianyin Xu, Daniel Williams
           </span>
         </div>
       </td>
@@ -450,7 +451,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 6, 2022.
             <br>
-            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+            Committee: Josep Torrellas (chair), Jian Huang, David Padua, Tianyin Xu, John Kalamatianos, Thomas F. Wenisch, Vijay Nagarajan
             <br>
 	    <font color="#C40233"><b>David J. Kuck Outstanding PhD Thesis Award</b></font>
           </span>
@@ -470,7 +471,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jan. 6, 2022.
             <br>
-            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+            Committee: Gul Agha (chair), Klara Nahrstedt, Tianyin Xu, Myeongjae Jeon
           </span>
         </div>
       </td>
@@ -488,7 +489,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 14, 2021.
             <br>
-            Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
+            Committee: Ravishankar K. Iyer (chair), Wen-mei W. Hwu, William T. Kramer, Tianyin Xu, Steve Keckler
           </span>
         </div>
       </td>
@@ -506,7 +507,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 27, 2021.
             <br>
-            Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
+            Committee: Brighten Godfrey (co-chair), Grigore Roşu (co-chair), Tianyin Xu, Jitendra Padhye
           </span>
         </div>
       </td>
@@ -524,7 +525,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 24, 2021.
             <br>
-            Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
+            Committee: Tao Xie (co-chair), Darko Marinov (co-chair), Tianyin Xu, Suman Nath
             <br>
 	    <font color="#C40233"><b>ACM SIGSOFT Outstanding Doctoral Dissertation Award</b></font>
 	  </span>
@@ -544,7 +545,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on August 19, 2020.
             <br>
-            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+            Committee: Josep Torrellas (chair), Christopher W. Fletcher, Nam Sung Kim, Christos Kozyrakis, Vijayaraghavan (Ravi) Soundararajan, Tianyin Xu
 	    <br>
 	    <font color="#C40233"><b>ACM SIGARCH - IEEE-CS TCCA Outstanding Dissertation Award</b></font>
 	    <br>
@@ -566,7 +567,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 1, 2020.
             <br>
-            Advisor: <a href="http://indy.cs.illinois.edu/" target="_blank">Indranil Gupta</a>
+            Committee: Indranil Gupta (chair), Klara Nahrtstedt, Tianyin Xu, Ganesh Ananthanarayanan
           </span>
         </div>
       </td>
@@ -585,7 +586,7 @@ td.papers {
               <br>
               Department of Computer Science, University of Illinois at Urbana-Champaign, defended on May 8, 2020.
               <br>
-              Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+              Committee: Klara Nahrtstedt (chair), Indranil Gupta, Tianyin Xu, Rittwik Jana
             </span>
           </div>
         </td>
@@ -603,7 +604,7 @@ td.papers {
               <br>
               Department of Computer Science, University of Illinois at Urbana-Champaign, defended on March 12, 2020.
               <br>
-              Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
+              Committee: Matthew Caesar (chair), Brighten Godfrey, Tianyin Xu, Aurojit Panda, Alan Mishchenko
             </span>
           </div>
         </td>
