--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ ol { padding-left: 1.5em; }
 
 <span class="style6">Tianyin Xu</span>
 
-<span class="style123">Assistant Professor
+<span class="style123">Associate Professor
 
 <a href="https://cs.illinois.edu/", target="_blank">Department of Computer Science</a>
 (Courtesy appointment by <a href="https://ece.illinois.edu/", target="_blank">ECE</a>)
