--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -485,7 +485,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>, Ph.D.
             <br>
-                Machine Learning For Achieving Dependability in Mission-Critical Systems
+            Assessing Dependability of Emergent Large Scale Autonomous Systems In The Wild
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 14, 2021.
             <br>
