--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,10 +90,9 @@ td.papers {
 	    <br>
 	    Reliable Cloud System Management: Challenges and Tools
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Sep. 17, 2025.
             <br>
             Committee: Tianyin Xu (chair), Indranil Gupta, Darko Marinov, Ramnatthan Alagappan, Chen Wang
-          </span>
         </div>
       </td>
   </tr>
