--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,21 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://yangchenyuan.github.io" target="_blank">Chenyuan Yang</a></strong>
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+            <br>
+            Committee: Lingming Zhang (chair), Shan Lu, Darko Marinov, Tianyin Xu
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
 	    <br>
 	    Reliable Cloud System Management: Challenges and Tools
