--- a/pub.html
+++ b/pub.html
@@ -78,6 +78,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">NeurIPS'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Stratus: A Multi-agent System for Autonomous Reliability Engineering of Modern Clouds</strong> [<a href="https://arxiv.org/pdf/2506.02009" target="_blank">pdf</a> | <a href="pub/oat_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yinfang Chen, Jiaqi Pan, Jackson Clark, Yiming Su, Noah Zheutlin, Bhavya Bhavya, Rohan Arora, Yu Deng, Saurabh Jha, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 39th Annual Conference on Neural Information Processing Systems (<font color="#083b89"><b>NeurIPS'25</b></font>), San Diego, SD (also Mexico City, Mexico), Dec. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">ApSys'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -153,6 +169,26 @@ td.papers {
 							<a href="https://news.ycombinator.com/item?id=44537955" target="_blank">Hacker News</a>
 						    </b>
 					          </font>
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">ICML'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>ITBench: Evaluating AI Agents across Diverse Real-World IT Automation Tasks</strong> [<a href="https://arxiv.org/pdf/2502.05352" target="_blank">pdf</a> | <a href="pub/itb_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Saurabh Jha, Rohan Arora, Yuji Watanabe, Takumi Yanagawa, Yinfang Chen, Jackson Clark, et al.
+						  <br>
+						  In Proceedings of the 42th International Conference on Machine Learning (<font color="#083b89"><b>ICML'25</b></font>), Vancouver, BC, Canada, Jul. 2025.
+						  <br>
+						  <font color="#C40233">
+						  Spotlight and Oral Presentation
+						  </font>
 					  	</span>
 				  </div>
 		</td>
@@ -325,36 +361,6 @@ td.papers {
 						  Jovan Stojkovic, Chloe Alverti, Alan Andrade, Nikoleta Iliakopoulou, Hubertus Franke, Tianyin Xu, and Josep Torrellas
 						  <br>
 						  In Proceedings of the 31st IEEE International Symposium on High-Performance Computer Architecture (<font color="#083b89"><b>HPCA'25</b></font>), Las Vegas, NV, Mar. 2025.
-					  	</span>
-				  </div>
-		</td>
-	</tr>
-
-	<tr>
-		<td class="date"><font color="#083b89">arXiv</font></td>
-			<td class="papers">
-				  <div align="justify" class="STYLE4">
-					<p></p>
-						<span style="font-size: 12pt;">
-						  <strong>ITBench: Evaluating AI Agents across Diverse Real-World IT Automation Tasks</strong> [<a href="https://arxiv.org/pdf/2502.05352" target="_blank">pdf</a> | <a href="pub/itb_bib.txt" target="_blank">bib</a>]
-						  <br>
-						  Saurabh Jha, Rohan Arora, Yuji Watanabe, Takumi Yanagawa, Yinfang Chen, Jackson Clark, et al.
-						  <br>
-						  arXiv:2502.05352, Feb. 2025.
-						  <br>
-						  <font color="#C40233">
-						  <b>Open-sourced by IBM (see <a href="https://research.ibm.com/blog/it-agent-benchmark" target="_blank">IBM Blog<a>):</b>
-						  </font>
-						  <br>
-						  <font size="2">
-						  - <a href="https://github.com/IBM/ITBench" target="_blank">https://github.com/IBM/ITBench</a>
-						  <br>
-						  - <a href="https://github.com/IBM/ITBench-Tools" target="_blank">https://github.com/IBM/ITBench-Tools</a>
-						  <br>
-						  - <a href="https://github.com/IBM/ITBench-SRE-Agent" target="_blank">https://github.com/IBM/ITBench-SRE-Agent</a>
-						  <br>
-						  - <a href="https://github.com/IBM/ITBench-CISO-CAA-Agent" target="_blank">https://github.com/IBM/ITBench-CISO-CAA-Agent</a>
-						  </font>
 					  	</span>
 				  </div>
 		</td>
