--- a/pub.html
+++ b/pub.html
@@ -87,7 +87,7 @@ td.papers {
 						  <br>
 						  Yinfang Chen, Jiaqi Pan, Jackson Clark, Yiming Su, Noah Zheutlin, Bhavya Bhavya, Rohan Arora, Yu Deng, Saurabh Jha, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 39th Annual Conference on Neural Information Processing Systems (<font color="#083b89"><b>NeurIPS'25</b></font>), San Diego, SD (also Mexico City, Mexico), Dec. 2025.
+						  In Proceedings of the 39th Annual Conference on Neural Information Processing Systems (<font color="#083b89"><b>NeurIPS'25</b></font>), San Diego, CA (also at Mexico City, Mexico), Dec. 2025.
 					  	</span>
 				  </div>
 		</td>
@@ -187,7 +187,7 @@ td.papers {
 						  In Proceedings of the 42th International Conference on Machine Learning (<font color="#083b89"><b>ICML'25</b></font>), Vancouver, BC, Canada, Jul. 2025.
 						  <br>
 						  <font color="#C40233">
-						  Spotlight and Oral Presentation
+						  <b>Spotlight and Oral Presentation</b>
 						  </font>
 					  	</span>
 				  </div>
