--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.linkedin.com/in/lilygniedz" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now)</p>
+								<p class="STYLE223"><a href="https://www.linkedin.com/in/lilygniedz" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now)</p>, 
+									<a href="https://siebelschool.illinois.edu/broadening-participation-computing/programs/csambassadors" target="_blank"><font color="#E84A27">CS STARS</font></a>
                              </TD>
                           </TR>
 
