--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,21 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong>Siddharth Agarwal</strong>
+	    <br>
+            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
+			<br>
+            Committee: Nam Sung Kim (chair)
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://yangchenyuan.github.io" target="_blank">Chenyuan Yang</a></strong>
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
