--- a/pub.html
+++ b/pub.html
@@ -110,6 +110,22 @@ td.papers {
 	</tr> 
 
 	<tr>
+		<td class="date"><font color="#083b89">ASE'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>DebCovDiff: Differential Testing of Coverage Measurement Tools on Real-World Projects</strong> [<a href="pub/cov-diff.pdf" target="_blank">pdf</a> | <a href="pub/cov-diff_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Wentao Zhang, Jinghao Jia, Erkai Yu, Darko Marinov, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (<font color="#083b89"><b>ASE'25</b></font>), Seoul, Korea, Nov. 2025.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
+
+	<tr>
 		<td class="date"><font color="#083b89">MICRO'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
