--- a/index.html
+++ b/index.html
@@ -450,13 +450,13 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit</a> and <a href="pub/rex-lpc.pdf" target="_blank">LPC</p>
 				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability at 
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
 					and SOSP.
 				</p>
 				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
-				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
 				<p class="STYLE223">Tianyin presented the group's efforts on cloud system reliability at
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
