--- a/pub.html
+++ b/pub.html
@@ -143,7 +143,7 @@ td.papers {
 						  Project: <a href="https://github.com/rex-rs/rex" target="_blank">https://github.com/rex-rs/rex</a>
 						  <br>
 						  <font color="#C40233">
-					            <b>Selected for presentation by <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit 2025</a></b>
+					            <b>Selected for presentation by <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit</a> and <a href="pub/rex-lpc.pdf" target="_blank">Linux Plumbers Conference</a> </b>
 					          </font>
 						  <br>
 						  <font color="#C40233">
