--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit</a> and <a href="pub/rex-lpc.pdf" target="_blank">LPC</p>
+				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit</a> and <a href="pub/rex-lpc.pdf" target="_blank">Linux Plumbers Conference (LPC)</p>
 				<p class="STYLE223">Jackson will give tutorials on benchmarking AI agents for system reliability at 
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
