--- a/index.html
+++ b/index.html
@@ -689,12 +689,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saleha Muzammil</a> (NUCES), UIUC+ SUR in SE, Summer 2025 &rarr; UVA (MS)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
+				  <p class="STYLE223"><a href="https://salehamuzammil.vercel.app" target="_blank">Saleha Muzammil</a> (NUCES), UIUC+ SUR in SE, Summer 2025 &rarr; University of Virginia (PhD)</p>
 				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mustafa Ashfaq</a> (LUMS), UIUC+ SUR in SE, Summer 2024 &rarr; University of Michigan (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 			          <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE 2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://moogician.github.io/" target="_blank">Hao (Tony) Wang</a> (Peking U.), UIUC+ SUR in SE, Summer 2023 co-hosted by <a href="https://mir.cs.illinois.edu/marinov" target="_blank">Darko Marinov</a> &rarr; University of California Berkeley (PhD)</p>
