--- a/travel.html
+++ b/travel.html
@@ -435,7 +435,7 @@ div.Section1
 						    <li>Laramie, WY (2018) </li>
 						    <li>Lexington, KY (2021) </li>
 				  		    <li>Little Rock, AK (2024) </li>
-				  		    <li>Long Island, NY (2024) </li>
+				  		    <li>Long Island, NY (2024, 2025) </li>
 						    <li>Los Angeles, CA (2012, 2016) </li>
 						    <li>Louisville, KY (2021) </li>
 						    <li>Madison, WI (2022) </li>
@@ -447,11 +447,12 @@ div.Section1
                             	                    <li>Monterey, CA (2015) </li>
 						    <li>Montrose, CO (2023) </li>
 						    <li>Morro Bay, CA (2017) </li>
+						    <li>Mount Kisco, NY (2025) </li>
 						    <li>Mountain View, CA (2024) </li>
 						    <li>Nashville, TN (2022) </li>
 						    <li>Newark, CA (2017-2018) </li>
 						    <li>New Port, RI (2023) </li>
-						    <li>New York City, NY (2017, 2022) </li>
+						    <li>New York City, NY (2017, 2022, 2025) </li>
 						    <li>Niagara Falls, NY (2023) </li>	  
 						    <li>Oakland, CA (2018) </li>
 						    <li>Orlando, FL (2023) </li>
