--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://fanchung.net" target="_blank">Fan Chung</a> (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
 				  <p class="STYLE223"><a href="https://irisesd.github.io" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, Fall 2023, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://zichengma.github.io" target="_blank">Zicheng Ma</a>, BE, 2023-2024 awarded
-					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Harvard University (MS) &rarr; NVIDIA (Triton Server)</p>
+					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Harvard University (MS) &rarr; Nvidia (Triton Server)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE, 2023 &rarr; UIUC (MS) </p>
 				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
