--- a/pub.html
+++ b/pub.html
@@ -83,7 +83,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						  <strong>Stratus: A Multi-agent System for Autonomous Reliability Engineering of Modern Clouds</strong> [<a href="https://arxiv.org/pdf/2506.02009" target="_blank">pdf</a> | <a href="pub/oat_bib.txt" target="_blank">bib</a>]
+						  <strong>Stratus: A Multi-agent System for Autonomous Reliability Engineering of Modern Clouds</strong> [<a href="https://arxiv.org/pdf/2506.02009" target="_blank">pdf</a> | <a href="pub/stratus_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Yinfang Chen, Jiaqi Pan, Jackson Clark, Yiming Su, Noah Zheutlin, Bhavya Bhavya, Rohan Arora, Yu Deng, Saurabh Jha, and Tianyin Xu
 						  <br>
@@ -99,7 +99,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>DebCovDiff: Differential Testing of Coverage Measurement Tools on Real-World Projects</strong> [<a href="pub/cov-diff.pdf" target="_blank">pdf</a> | <a href="pub/cov-diff_bib.txt" target="_blank">bib</a>]
+						  <strong>DebCovDiff: Differential Testing of Coverage Measurement Tools on Real-World Projects</strong> [<a href="pub/covdiff.pdf" target="_blank">pdf</a> | <a href="pub/covdiff_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Wentao Zhang, Jinghao Jia, Erkai Yu, Darko Marinov, and Tianyin Xu
 						  <br>
