--- a/index.html
+++ b/index.html
@@ -455,14 +455,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				<p class="STYLE223">Jackson gave tutorials on benchmarking AI agents for site reliability engineering at 
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
-					and SOSP.
+					and <a href="https://sigops.org/s/conferences/sosp/2025/workshops.html" target="_blank">SOSP</a>.
 				</p>
 				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
 				<p class="STYLE223">Tianyin presented the group's efforts on cloud system reliability at
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
-					UIUC SysNet Retreat, 
-					ETH,
 					<a href="https://suri.epfl.ch" target="_blank">EPFL SuRI</a>,
 					and 
 					<a href="https://cloudresearch.org/workshops/18th/" target="_blank">Cloud Control Workshop</a>.
