--- a/index.html
+++ b/index.html
@@ -700,10 +700,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://irisesd.github.io" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, Fall 2023, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://zichengma.github.io" target="_blank">Zicheng Ma</a>, BE, 2023-2024 awarded
 					    <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Harvard University (MS) &rarr; Nvidia (Triton Server)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/peizhe-liu" target="_blank">Peizhe Liu</a>, BE, 2023 &rarr; UIUC (MS)
-					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/awards/trick" target="_blank"><font color="#E84A27">Timothy N. Trick Leadership Award</font></a>,
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/peizhe-liu" target="_blank">Peizhe Liu</a>, BE, 2023, awarded <a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/awards/trick" target="_blank"><font color="#E84A27">Timothy N. Trick Leadership Award</font></a>,
 					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/scholarships/leung" target="_blank"><font color="#E84A27">Brian and Sophie Leung Scholarship</font></a>,
-					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/scholarships/perry" target="_blank"><font color="#E84A27">Harriet and Robert Perry Scholarship</font></a></p>
+					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/scholarships/perry" target="_blank"><font color="#E84A27">Harriet and Robert Perry Scholarship</font></a> &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS) &rarr; Snowflake</p>
