congrats to Jiyuan

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Student (Fall 2022 - now),
+								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Candidate (Fall 2022 - now),
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/graduate-fellowships-awards/wing-kai-cheng-fellowship" target="_blank"><font color="#E84A27">Wing Kai Cheng Fellowship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
