Add conference details for 2026 and 2025

--- a/index.html
+++ b/index.html
@@ -536,9 +536,11 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
 	          <p class="STYLE223">2026
+			SOSP, ISCA,
 		    <a href="https://2026.eurosys.org" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/nsdi26" target="_blank">NSDI</a>,
 		    <a href="https://conf.researchr.org/home/fse-2026" target="_blank">FSE</a>,
+			ICLR
 	          </p>
 		  <p class="STYLE223">2025
 		    <a href="https://sigops.org/s/conferences/sosp/2025" target="_blank">SOSP</a>,
