--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/orangerouter" target="_blank">Quan Hao Ng</a>, BS, Spring 2025 &rarr; Startup (stealth mode)</p>
 				  <p class="STYLE223"><a href="https://salehamuzammil.vercel.app" target="_blank">Saleha Muzammil</a> (NUCES), UIUC+ SUR in SE, Summer 2025 &rarr; University of Virginia (PhD)</p>
 				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
