Update thesis committee details for Houxiang Ji

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -187,13 +187,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Houxiang Ji</strong>
-	    <br>
-	    Memory Optimization Kernel Feature Offloading in Heterogeneous Systems
-	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
-            <br>
-            Committee: Nam Sung Kim (chair), Josep Torrellas, Saugata Ghose, Tianyin Xu, Ren Wang
+	    ~~
           </span>
         </div>
       </td>
@@ -205,7 +199,13 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    ~~
+            <strong>Houxiang Ji</strong>
+	    <br>
+	    Cutting The Datacenter Tax In Heterogeneous System: A Coherence-Spectrum Approach
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 7, 2025.
+            <br>
+            Committee: Nam Sung Kim (chair), Josep Torrellas, Saugata Ghose, Tianyin Xu, Ren Wang
           </span>
         </div>
       </td>
