Add hyperlink to Houxiang Ji's name
Updated the name entry to include a hyperlink.

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -199,7 +199,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Houxiang Ji</strong>
+            <strong><a href="https://hxji.github.io" target="_blank">Houxiang Ji</a></strong>
 	    <br>
 	    Cutting The Datacenter Tax In Heterogeneous System: A Coherence-Spectrum Approach
 	    <br>
