--- a/index.html
+++ b/index.html
@@ -643,7 +643,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
@@ -688,34 +687,35 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner) &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE224"># Bachelors</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, UIUC BE, 2025 &rarr; Nvidia</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
-				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/orangerouter" target="_blank">Quan Hao Ng</a>, BS, Spring 2025 &rarr; Startup (stealth mode)</p>
+				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, UIUC BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/orangerouter" target="_blank">Quan Hao Ng</a>, UIUC BS, Spring 2025 &rarr; Startup (stealth mode)</p>
 				  <p class="STYLE223"><a href="https://salehamuzammil.vercel.app" target="_blank">Saleha Muzammil</a> (NUCES), UIUC+ SUR in SE, Summer 2025 &rarr; University of Virginia (PhD)</p>
 				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mustafa Ashfaq</a> (LUMS), UIUC+ SUR in SE, Summer 2024 &rarr; University of Michigan (MS)</p>
 				  <p class="STYLE223"><a href="https://storage.cs.tsinghua.edu.cn/~rtx" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, UIUC BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/saad-sher-alam-65515721b" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://moogician.github.io/" target="_blank">Hao (Tony) Wang</a> (Peking U.), UIUC+ SUR in SE, Summer 2023 co-hosted by <a href="https://mir.cs.illinois.edu/marinov" target="_blank">Darko Marinov</a> &rarr; University of California Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://fanchung.net" target="_blank">Fan Chung</a> (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
 				  <p class="STYLE223"><a href="https://irisesd.github.io" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, Fall 2023, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
-				  <p class="STYLE223"><a href="https://zichengma.github.io" target="_blank">Zicheng Ma</a>, BE, 2023-2024 awarded
+				  <p class="STYLE223"><a href="https://zichengma.github.io" target="_blank">Zicheng Ma</a>, UIUC BE, 2023-2024 awarded
 					    <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Harvard University (MS) &rarr; Nvidia (Triton Server)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/peizhe-liu" target="_blank">Peizhe Liu</a>, BE, 2023, awarded <a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/awards/trick" target="_blank"><font color="#E84A27">Timothy N. Trick Leadership Award</font></a>,
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/peizhe-liu" target="_blank">Peizhe Liu</a>, UIUC BE, 2023, awarded <a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/awards/trick" target="_blank"><font color="#E84A27">Timothy N. Trick Leadership Award</font></a>,
 					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/scholarships/leung" target="_blank"><font color="#E84A27">Brian and Sophie Leung Scholarship</font></a>,
 					<a href="https://ece.illinois.edu/academics/ugrad/scholarships-and-awards/scholarships/perry" target="_blank"><font color="#E84A27">Harriet and Robert Perry Scholarship</font></a> &rarr; UIUC (MS)</p>
-				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
+				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, UIUC BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
-				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS) &rarr; Snowflake</p>
+				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, UIUC BE 2023 &rarr; CMU (MS) &rarr; Snowflake</p>
 				  <p class="STYLE223"><a href="https://taham0.github.io" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue University (MS) &rarr; Mobby AI</p>
 	              <p class="STYLE223"><a href="https://whentojump.xyz">Wentao Zhang</a> (SJTU), UIUC+ SUR in SE, 2022 &rarr; UIUC (PhD)</p>
-				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS) &rarr; ByteDance</p>    
+				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, UIUC BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, UIUC BE 2022 &rarr; UIUC (MS) &rarr; ByteDance</p>    
 				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele" target="_blank">Kele Huang</a> (CAS), UIUC+ SUR in SE, 2021 &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE223"><a href="https://fanweneddie.github.io" target="_blank">Wen Fan</a> (USTC), UIUC+ SUR in SE, 2021 &rarr; Purdue University (PhD)</p>
-				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BE 2021,
+				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, UIUC BE 2021,
 					  awarded 
 					  <a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a> and 
 					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Google (kernel)</p>
