--- a/index.html
+++ b/index.html
@@ -643,10 +643,10 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
+								<p class="STYLE223"><a href="https://saadmrp1038.github.io" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.linkedin.com/in/lilygniedz" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now),
+								<p class="STYLE223"><a href="https://777lefty.github.io" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
+								<p class="STYLE223"><a href="https://lilygniedz.me" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now),
 									<a href="https://siebelschool.illinois.edu/broadening-participation-computing/programs/csambassadors" target="_blank"><font color="#E84A27">CS STARS</font></a></p>
                              </TD>
                           </TR>
