--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -102,8 +102,10 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
 	    <strong><a href="https://yangchenyuan.github.io" target="_blank">Chenyuan Yang</a></strong>
+		<br>
+		System Reliability in the Era of Generative AI
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Nov. 11, 2025
             <br>
             Committee: Lingming Zhang (chair), Shan Lu, Darko Marinov, Tianyin Xu
         </div>
