--- a/travel.html
+++ b/travel.html
@@ -387,21 +387,22 @@ div.Section1
 						    <li>Albany, NY (2023) </li>
 						    <li>Alexandria, VA (2018) </li>
 						    <li>Annapolis, MD (2017) </li>
-					            <li>Arlington, VA (2018) </li>
-					            <li>Ashland, WI (2022) </li>
+					        <li>Arlington, VA (2018) </li>
+					        <li>Ashland, WI (2022) </li>
 						    <li>Atlanta, GA (2017) </li>
+							<li>Austin, TX (2025) </li>
 						    <li>Baltimore, MD (2017) </li>
 						    <li>Berkeley, CA (2018, 2024) </li>
 						    <li>Big Sur, CA (2017) </li>
-					            <li>Bloomington, IL (2020, 2023) </li>
+					        <li>Bloomington, IL (2020, 2023) </li>
 						    <li>Bloomington, IN (2021) </li>
-                            			    <li>Boston, MA (2019, 2023, 2025) </li>
+                            <li>Boston, MA (2019, 2023, 2025) </li>
 						    <li>Boulder, CO (2023) </li>
 						    <li>Broomfield, CO (2014) </li>
 						    <li>Buffalo, NY (2023) </li>	  
 						    <li>Carmel-by-the-Sea, CA (2017) </li>
 						    <li>Cheyenne, WY (2018) </li>
-                            			    <li>Chicago, IL (2018--) </li>
+                            <li>Chicago, IL (2018--) </li>
 						    <li>Cincinnati, OH (2021) </li>
 						    <li>Clarksville, TN (2021) </li>
 						    <li>Colorado Springs, CO (2023) </li>
@@ -418,7 +419,7 @@ div.Section1
 						    <li>Farmington, PA (2013) </li>
 				  		    <li>Fayetteville, TN (2024) </li>
 						    <li>Frankfort, KY (2021) </li>
-					            <li>Fremont, CA (2017-2018) </li>
+					        <li>Fremont, CA (2017-2018) </li>
 						    <li>Gatlinburg, TN (2022) </li>
 						    <li>Gibson City, IL (2023) </li>
 						    <li>Green Bay, WI (2022) </li>
@@ -439,12 +440,12 @@ div.Section1
 						    <li>Los Angeles, CA (2012, 2016) </li>
 						    <li>Louisville, KY (2021) </li>
 						    <li>Madison, WI (2022) </li>
-					            <li>Marshall, IN (2020) </li>
-				       		    <li>Memphis, TN (2024) </li>
+					        <li>Marshall, IN (2020) </li>
+				       		<li>Memphis, TN (2024) </li>
 						    <li>Menlo Park, CA (2017-2018) </li>
 						    <li>Millbrae, CA (2018)</li>
-					            <li>Milwaukee, WI (2022)</li>
-                            	                    <li>Monterey, CA (2015) </li>
+					        <li>Milwaukee, WI (2022)</li>
+                            <li>Monterey, CA (2015) </li>
 						    <li>Montrose, CO (2023) </li>
 						    <li>Morro Bay, CA (2017) </li>
 						    <li>Mount Kisco, NY (2025) </li>
@@ -483,7 +484,7 @@ div.Section1
 						    <li>Sioux Falls, SD (2018)</li>
 						    <li>Solvang, CA (2017) </li>
 						    <li>Springfield, IL (2019) </li>
-					            <li>St. Louis, MO (2021) </li>
+					        <li>St. Louis, MO (2021) </li>
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
 				  		    <li>Tarrytown, NY (2024) </li>
@@ -492,8 +493,8 @@ div.Section1
 						    <li>West Lafayette, IN (2023) </li>
 				  		    <li>White Plains, NY (2022, 2023) </li>
 				  		    <li>Yorktown Heights, NY (2022, 2023, 2024) </li>
-                          			</ul>
-                        			</li>
+                          </ul>
+                        </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Vatican City (2010, 2011)</li>
