with Ayush and Owen

--- a/travel.html
+++ b/travel.html
@@ -415,6 +415,7 @@ div.Section1
 						    <li>Des Moines, IA (2018) </li>
 						    <li>Duluth, MN (2022) </li>
 						    <li>Eau Claire, WI (2022) </li>
+							<li>Effingham, IL (2025) </li>
 						    <li>Elko, NV (2018) </li>
 						    <li>Farmington, PA (2013) </li>
 				  		    <li>Fayetteville, TN (2024) </li>
@@ -484,7 +485,7 @@ div.Section1
 						    <li>Sioux Falls, SD (2018)</li>
 						    <li>Solvang, CA (2017) </li>
 						    <li>Springfield, IL (2019) </li>
-					        <li>St. Louis, MO (2021) </li>
+					        <li>St. Louis, MO (2021, 2025) </li>
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
 				  		    <li>Tarrytown, NY (2024) </li>
