--- a/pub.html
+++ b/pub.html
@@ -90,6 +90,16 @@ td.papers {
 						  Yinfang Chen, Jiaqi Pan, Jackson Clark, Yiming Su, Noah Zheutlin, Bhavya Bhavya, Rohan Arora, Yu Deng, Saurabh Jha, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 39th Annual Conference on Neural Information Processing Systems (<font color="#083b89"><b>NeurIPS'25</b></font>), San Diego, CA (also at Mexico City, Mexico), Dec. 2025.
+						  <br>
+						  <font color="#C40233">
+						  <b>Spotlight and Oral Presentation</b>
+						  </font>
+						  <br>
+						  <font color="#C40233">
+					            <b>Covered by <a href="https://research.ibm.com/blog/undo-agent-for-cloud" target="_blank">IBM Blog</a> and
+									<a href="https://www.tipranks.com/news/ibm-builds-an-ai-undo-button-to-fix-cloud-outages-faster" target="_blank">TipRanks</a>
+								</b>
+					      </font>
 					  	</span>
 				  </div>
 		</td>
