--- a/index.html
+++ b/index.html
@@ -452,13 +452,15 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TD class=content width="96%">
 				<p class="STYLE223"><a href="https://www.sigops.org/2025/defining-system-intelligence" target="_blank">Defining System Intelligence</a> at SIGOPS Blog</p>
 				<p class="STYLE223"><a href="https://www.sigops.org/2025/the-next-horizon-of-system-intelligence" target="_blank">The Next Horizon of System Intelligence</a> at SIGOPS Blog</p>
+				<p class="STYLE223">Stratus is spotlighted by <a href="https://research.ibm.com/blog/undo-agent-for-cloud" target="_blank">IBM Blog</a>.</p> 
 				<p class="STYLE223">Jinghao presented <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://www.youtube.com/watch?v=4r7ECxEaGqM" target="_blank">Open Source Summit</a> and <a href="pub/rex-lpc.pdf" target="_blank">Linux Plumbers Conference (LPC)</a>, 2025</p>
 				<p class="STYLE223">Jackson gave tutorials on benchmarking AI agents for site reliability engineering at 
 					<a href="https://dsn2025.github.io/cptutorials.html" target="_blank">DSN</a>, 
 					<a href="https://conf.researchr.org/track/fse-2025/fse-2025-tutorials?" target="_blank">FSE</a>,
 					and <a href="https://sigops.org/s/conferences/sosp/2025/workshops.html" target="_blank">SOSP</a>.
 				</p>
-				<p class="STYLE223">ITBench is spotlighted by <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
+				<p class="STYLE223">ITBench is spotlighted by <a href="https://research.ibm.com/blog/it-agent-benchmark" target="_blank">IBM Blog</a>
+					and <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/news/76016" target="_blank">IBM-Illinois Discovery Accelerator Institute</a>.</p> 
 				<p class="STYLE223">Tianyin presented the group's efforts on cloud system reliability at
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>,
