make the doc external

--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		          <TD width="0.5%">&nbsp;</TD>
 
 					   <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ta id="ta"></A></span><b>$ cat teaching</b></span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ta id="ta"></A></span><b>$ cat teaching # 
+							(read <a href="https://docs.google.com/document/d/1tjJe5aqQ6WqxURMSPPf4NDMn3IYZijsSxFOwAOgElA4" target="_blank">this</a> if you are asking me for a letter)</b></span></TD>
 				        </TR>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
