--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,7 +90,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
 			<br>
-            Committee: Adam Bates (chair)
+            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, Thomas Pasquier
         </div>
       </td>
   </tr>
