Update thesis committee member details

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -102,6 +102,8 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
 	    <strong>Siddharth Agarwal</strong>
+		<br>
+			Server Microarchitecture for Hyperscale Networking 
 	    <br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
 			<br>
