--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -105,7 +105,7 @@ td.papers {
 		<br>
 			Server Microarchitecture for Hyperscale Networking 
 	    <br>
-            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
+            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign, passed prelim on Dec. 4, 2025
 			<br>
             Committee: Nam Sung Kim (chair), Saksham Agarwal, Rakesh Kumar, Tianyin Xu, Mohammad Alian
         </div>
